clean up sonar issues